[gd_scene load_steps=21 format=2]

[ext_resource path="res://Asstes/TileMap/grass_05.png" type="Texture" id=1]
[ext_resource path="res://Asstes/Objects/base.png" type="Texture" id=2]
[ext_resource path="res://Asstes/TileMap/dirt_06.png" type="Texture" id=3]
[ext_resource path="res://Asstes/Objects/tower.png" type="Texture" id=4]
[ext_resource path="res://Asstes/Objects/unit_t1.png" type="Texture" id=5]
[ext_resource path="res://Asstes/TileMap/stone_07.png" type="Texture" id=6]
[ext_resource path="res://Asstes/Objects/unit_t2.png" type="Texture" id=7]
[ext_resource path="res://Asstes/TileMap/sand_07.png" type="Texture" id=8]
[ext_resource path="res://Asstes/Objects/unit_t3.png" type="Texture" id=9]
[ext_resource path="res://Asstes/TileMap/mars_07.png" type="Texture" id=10]
[ext_resource path="res://Asstes/Objects/unit_t4.png" type="Texture" id=11]
[ext_resource path="res://Asstes/Effects/sleep_Z.png" type="Texture" id=12]
[ext_resource path="res://Scenes/UI/Ingame/UIInfo.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/GameLogic.gd" type="Script" id=14]
[ext_resource path="res://Scripts/MapManager.gd" type="Script" id=15]
[ext_resource path="res://Asstes/Effects/base_shop.png" type="Texture" id=16]
[ext_resource path="res://Scripts/2DCameraController.gd" type="Script" id=17]

[sub_resource type="TileSet" id=1]
0/name = "dirt_06.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 120, 140 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "grass_05.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 120, 140 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "mars_07.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 120, 140 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "sand_07.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 120, 140 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "stone_07.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 120, 140 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "base.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 120, 140 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "tower.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 120, 140 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "unit_t1.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 120, 140 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "unit_t2.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 120, 140 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "unit_t3.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 120, 140 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "unit_t4.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 120, 140 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "sleep_Z.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 120, 140 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "base_shop.png 1"
1/texture = ExtResource( 16 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 14 )
camera_speed = 30.0

[node name="Map" type="Node" parent="."]
script = ExtResource( 15 )

[node name="FloorMap" type="TileMap" parent="Map"]
tile_set = SubResource( 1 )
cell_size = Vector2( 123, 107 )
cell_half_offset = 0
format = 1

[node name="ObjectMap" type="TileMap" parent="Map"]
tile_set = SubResource( 2 )
cell_size = Vector2( 123, 107 )
cell_half_offset = 0
format = 1

[node name="EffectMap" type="TileMap" parent="Map"]
tile_set = SubResource( 3 )
cell_size = Vector2( 123, 107 )
cell_half_offset = 0
format = 1

[node name="Players" type="Node" parent="."]

[node name="UIInfo" parent="." instance=ExtResource( 13 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 644.01, 364.569 )
current = true
zoom = Vector2( 1.5, 1.5 )
script = ExtResource( 17 )
[connection signal="select" from="." to="UIInfo" method="_on_Game_select"]
[connection signal="start_of_turn" from="." to="UIInfo" method="_on_Game_start_of_turn"]
[connection signal="tile_changed" from="Map" to="UIInfo" method="_on_Map_tile_changed"]
